# vfont

./: .gitignore  CMakeLists.txt
util/main/: CMakeLists.txt
util/main/json/: Json.h  JsonValidator.h  QHashJson.h  QIntJson.cpp  QIntJson.h  QListJson.h  QStringJson.cpp  QStringJson.h
util/main/util/: Try.h
util/test/: MultipleTest.cpp
util/test/util/: TrySpec.h
voicebank/: CMakeLists.txt
voicebank/main/: CMakeLists.txt
voicebank/main/values/: Mapping.cpp  Mapping.h  Meta.cpp  Meta.h  Pronounce.cpp  Pronounce.h  Range.cpp  Range.h  Segment.cpp  Segment.h  Voicebank.cpp  Voicebank.h
voicebank/main/values/json/: PrononuceJson.cpp  PrononuceJson.h  SegmentJson.cpp  SegmentJson.h
voicebank/test/: CMakeLists.txt  MultipleTest.cpp
voicebank/test/values/json/: SegmentJsonSpec.h
